--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -6,10 +6,13 @@
     <string name="all">All</string>
     <string name="switch_to_map">Map View</string>
     <string name="switch_to_list">List View</string>
-<string name="title">Title</string>
-<string name="due">Due</string>
+    <string name="title">Title</string>
+    <string name="due">Due</string>
+    <string name="by">By</string>
+    <string name="description">Description</string>
+    <string name="comments">Comments</string>
+    <string name="username">Username</string>
+    <string name="password">Password</string>
+    <string name="login">Login</string>
 
-<string name="by">By</string>
-<string name="description">Description</string>
-<string name="comments">Comments</string>
 </resources>
