--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -14,5 +14,5 @@
     <string name="username">Username</string>
     <string name="password">Password</string>
     <string name="login">Login</string>
-
+    <string name="refresh">Refresh</string>
 </resources>
