--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -28,7 +28,7 @@
     <string name="create_event_type">Event Type</string>
     <string name="create_event_description"> Event Description</string>
     <string name="create_event_date">Event Date</string>
-       <string name="save_event">Save</string>
+       <string name="save_event">Create</string>
     
     
     
